--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.1.1",
+    "mcp-evals": "^1.0.18",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
