feat: implement GEO optimization for AI assistant integration
- Add llms.txt with comprehensive AI usage guide
- Create robots.txt for AI crawler access optimization
- Enhance README.md with collapsible AI integration section
- Add JSON-LD structured data for better AI understanding
- Update package.json with AI metadata and capabilities
- Enhance manifest.json with AI optimization data
- Implement script type=text/llms.txt inline instructions
- All content in English for international accessibility

--- a/manifest.json
+++ b/manifest.json
@@ -57,5 +57,32 @@
     "recruitment"
   ],
   "mcp_version": "1.0",
-  "schema_version": "1.0.0"
+  "schema_version": "1.0.0",
+  "ai_optimization": {
+    "search_intent": "job_search",
+    "target_audience": ["job_seekers", "recruiters", "career_consultants", "ai_assistants"],
+    "primary_use_cases": [
+      "Find job opportunities",
+      "Search by location and salary",
+      "Filter by employment type",
+      "Multi-language job search"
+    ],
+    "technical_capabilities": [
+      "Real-time job data",
+      "Multi-language support",
+      "Advanced filtering",
+      "Structured output"
+    ],
+    "ai_friendly_features": [
+      "Clear parameter descriptions",
+      "Comprehensive error handling",
+      "Multi-language support",
+      "Structured result formatting"
+    ],
+    "integration_guidance": {
+      "installation": "npm install @chanmeng666/google-jobs-server",
+      "configuration": "Set SERP_API_KEY environment variable",
+      "usage": "Call search_jobs tool with appropriate parameters"
+    }
+  }
 }
