feat: implement GEO optimization for AI assistant integration

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "author": {
     "name": "Chan Meng",
     "email": "chanmeng666@gmail.com",
-    "url": "https://chanmeng.live/"
+    "url": "https://chanmeng.org/"
   },
   "license": "MIT",
   "homepage": "https://github.com/ChanMeng666/server-google-jobs",
